# cpp-knowledge-base

./: .clang-format  CMakeLists.txt  CMakePresets.json  CODE_STYLE.md  README.md  design_template.md
cmake/: clang_tidy.cmake  coverage_report.cmake
docker/: Dockerfile  docker_clean.sh
src/algorithms/backtracking/subsets/: CMakeLists.txt  subsets.cpp
src/cpp_idioms/raii/shared_ptr/: CMakeLists.txt  shared_ptr.cpp
src/data_structures/cache/lru_cache/: CMakeLists.txt  lru_cache.cpp
src/design_patterns/abstract_factory/: CMakeLists.txt  abstract_factory.cpp
src/design_patterns/adapter/: CMakeLists.txt  adapter.cpp
src/design_patterns/bridge/: CMakeLists.txt  bridge.cpp
src/design_patterns/builder/: CMakeLists.txt  builder.cpp
src/design_patterns/chain_of_responsibility/: CMakeLists.txt  chain_of_responsibility.cpp
src/design_patterns/command/: CMakeLists.txt  command.cpp
src/design_patterns/composite/: CMakeLists.txt  composite.cpp
src/design_patterns/decorator/: CMakeLists.txt  decorator.cpp
src/design_patterns/facade/: CMakeLists.txt  facade.cpp
src/design_patterns/factory_method/: CMakeLists.txt  factory_method.cpp
src/design_patterns/flyweight/: CMakeLists.txt  flyweight.cpp
src/design_patterns/iteractor/: CMakeLists.txt  iterator.cpp
src/design_patterns/mediator/: CMakeLists.txt  mediator.cpp
src/design_patterns/memento/: CMakeLists.txt  memento.cpp
src/design_patterns/observer/: CMakeLists.txt  observer.cpp
src/design_patterns/prototype/: CMakeLists.txt  prototype.cpp
src/design_patterns/proxy/: CMakeLists.txt  proxy.cpp
src/design_patterns/singleton/: CMakeLists.txt  singleton.cpp
src/design_patterns/state/: CMakeLists.txt  state.cpp
src/design_patterns/strategy/: CMakeLists.txt  strategy.cpp
src/design_patterns/visitor/: CMakeLists.txt  visitor.cpp
tests/: CMakeLists.txt
